@@ -37,9 +37,10 @@ Design questions ?
     menu
 [X] Add status barr message for the Plugins menu.
 [X] problems with translations .
-[ ] fix the problem when using MDI toplevel window
+[X] fix the problem when using MDI toplevel window
 [ ] Toolbar buttons text should be settable to gnomecc preference.
 [ ] add split window again
+[ ] fix the problem with the Prefs windos + mdi_mode = TOPLEVEL
 
 *** Chema maybe ***
 [ ] Try to fix the line & column pos
