@@ -82,31 +82,60 @@
 	  </widget>
 
 	  <widget>
-	    <class>GtkCheckButton</class>
-	    <name>splitscreen</name>
-	    <can_focus>True</can_focus>
-	    <label>Show splitscreen</label>
-	    <active>False</active>
-	    <draw_indicator>True</draw_indicator>
+	    <class>GtkVBox</class>
+	    <name>vbox9</name>
+	    <homogeneous>False</homogeneous>
+	    <spacing>0</spacing>
 	    <child>
 	      <padding>0</padding>
 	      <expand>False</expand>
 	      <fill>False</fill>
 	    </child>
-	  </widget>
 
-	  <widget>
-	    <class>GtkCheckButton</class>
-	    <name>toolbar_labels</name>
-	    <can_focus>True</can_focus>
-	    <label>Display text on toolbar buttons</label>
-	    <active>False</active>
-	    <draw_indicator>True</draw_indicator>
-	    <child>
-	      <padding>0</padding>
-	      <expand>False</expand>
-	      <fill>False</fill>
-	    </child>
+	    <widget>
+	      <class>GtkRadioButton</class>
+	      <name>toolbar_radio_button_1</name>
+	      <can_focus>True</can_focus>
+	      <label>Set toolbar according to system settings</label>
+	      <active>False</active>
+	      <draw_indicator>True</draw_indicator>
+	      <group>toolbar_settings</group>
+	      <child>
+		<padding>0</padding>
+		<expand>False</expand>
+		<fill>False</fill>
+	      </child>
+	    </widget>
+
+	    <widget>
+	      <class>GtkRadioButton</class>
+	      <name>toolbar_radio_button_2</name>
+	      <can_focus>True</can_focus>
+	      <label>Set toolbar to Icons only</label>
+	      <active>False</active>
+	      <draw_indicator>True</draw_indicator>
+	      <group>toolbar_settings</group>
+	      <child>
+		<padding>0</padding>
+		<expand>False</expand>
+		<fill>False</fill>
+	      </child>
+	    </widget>
+
+	    <widget>
+	      <class>GtkRadioButton</class>
+	      <name>toolbar_radio_button_3</name>
+	      <can_focus>True</can_focus>
+	      <label>Set toolbar to Icons with text</label>
+	      <active>False</active>
+	      <draw_indicator>True</draw_indicator>
+	      <group>toolbar_settings</group>
+	      <child>
+		<padding>0</padding>
+		<expand>False</expand>
+		<fill>False</fill>
+	      </child>
+	    </widget>
 	  </widget>
 	</widget>
       </widget>
