@@ -51,7 +51,7 @@ gedit_prefs_save_settings (void)
 	gnome_config_set_bool ("word_wrap", settings->word_wrap);
 	gnome_config_set_bool ("show_statusbar", settings->show_status);
 
-	gnome_config_set_bool ("toolbar_labels", settings->toolbar_labels);
+	gnome_config_set_int ("toolbar_labels", settings->toolbar_labels);
 	gnome_config_set_int ("toolbar", (gint) settings->have_toolbar);
 	gnome_config_set_int ("tb_text", (gint) settings->have_tb_text);
 	gnome_config_set_int ("tb_pix", (gint) settings->have_tb_pix);
@@ -139,7 +139,7 @@ gedit_prefs_load_settings (void)
 	settings->run = gnome_config_get_int ("run");
 	
 	settings->show_status = gnome_config_get_bool ("show_statusbar=TRUE");
-	settings->toolbar_labels = gnome_config_get_bool ("toolbar_labels");
+	settings->toolbar_labels = gnome_config_get_int ("toolbar_labels");
 	settings->have_toolbar = gnome_config_get_int ("toolbar");
 	settings->have_tb_text = gnome_config_get_int ("tb text");
 	settings->have_tb_pix = gnome_config_get_int ("tb_pix");
