@@ -1,5 +1,10 @@
 2000-06-17  Chema Celorio  <chema@celorio.com>
 
+	* dialogs/dialog-prefs.c: add toobar_labels group
+
+	* prefs.c (gedit_prefs_save_settings): toolbar_labels, change to int
+	(gedit_prefs_determine_use_fontset): ditto
+
 	* window.c (gedit_window_new): fix the problems with mdi_mode = TOPLEVEL
 
 	* gedit.c (main): reorder the *_init_functions
